Fix text wrapping on safari and more font include

--- a/src/Home.scss
+++ b/src/Home.scss
@@ -44,7 +44,7 @@ header {
 }
 
 #info {
-    max-width: 512px;
+    max-width: 520px;
 
     h1 {
         font-family: 'Source Serif Pro', serif;
